# cortex_2

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_GUIDELINES.md  MIGRATION_FROM_CORTEX.md  Makefile  QUICK_START.md  README.md  README_GITHUB.md  READY.md  ROADMAP.md  claude_please_read_me.txt  cleanup_project.sh  com.mikeybee.cortex2.plist  com.mikeybee.cortex2_api.plist  cortex.service  git_init.sh  git_push.sh  launch_api.sh  launch_api_python.sh  manage_service.sh  migrate_to_cortex2.sh  push_to_github.sh  pyproject.toml  run_tests.py  setup.sh  setup_github.sh
config/: cortex.yaml
docs/: MODULE_DEVELOPMENT_GUIDE.md  api_guide.md
documentation/: 01_system_overview.md  02_module_system.md  03_identity_system.md  README.md  implementation_roadmap.md  mcp_server.md
documentation/api/: core_api.md  module_api.md
documentation/architecture/: cognitive_controller.md  context_analyzer.md  design_philosophy.md  learning_system.md  module_registry.md  storage_tiers.md
documentation/development/: uv_guide.md
mcp_server/: cortex-mcp-debug.sh  cortex-mcp.sh  package-lock.json  package.json
mcp_server/src/: bridge.ts  index.ts  resources.ts  tools.ts
mcp_server/src/handlers/: context.ts  identity.ts  learning.ts  modules.ts  resources.ts
modules/mikey_bee_development/: manifest.yaml
modules/mikey_bee_development/content/: hardware.json  philosophy.json  preferences.json  projects.json  relationships.json
modules/project_cortex_2/: manifest.yaml
modules/project_cortex_2/knowledge/: concepts.json  module_system.json
src/cortex/: __init__.py  __main__.py  app.py  cli.py  server.py
src/cortex/api/: __init__.py  context.py  health.py  identity.py  knowledge_graph.py  models.py  modules.py  resources.py
src/cortex/core/: config.py
tests/: __init__.py  conftest.py
tests/integration/: test_module_loading_flow.py
tests/unit/: test_context_analyzer.py  test_event_bus.py  test_identity_manager.py  test_module_loader.py  test_module_registry.py  test_storage_tiers.py
tmp/: README.md
